# fdm2d-comp-mov

./: .gitignore  mesh.npz  note.md  pyproject.toml  readme.md  ses.py  ses1.py  ses2.py  task.py  utils.py
