[project]
name = "fdm2d-comp-mov"
version = "0.1.0"
description = ""
authors = [
    {name = "kotwice"}
]
readme = ""
requires-python = ">=3.12"
dependencies = [
    "numba (>=0.60.0,<0.61.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "h5py (>=3.12.1,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.15.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

